# hateoas

./: Cargo.toml  README.md
src/: content.rs  hateoas.rs  http_method.rs  lib.rs  metadata.rs  rel_link.rs  rel_link_collection.rs  resource_trait.rs  status.rs  status_code.rs  trait_hateoas.rs  trait_simple_data.rs
src/frameworks/: mod.rs  payload_control.rs
src/frameworks/actix/: body.rs  error.rs  future.rs  mod.rs
src/frameworks/axum/: mod.rs  test_helpers.rs
src/header/: header_key.rs  header_map.rs  header_value.rs  mod.rs
src/rel/: mod.rs  rel_link.rs  rel_link_collection.rs
