[package]
name = "hateoas"
version = "1.0.1"
edition = "2021"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
description = "HATEOAS implementation for handling structured responses/request"
readme = "README.md"
categories = ["HATEOAS", "Response", "Request"]
license = "MIT"
repository = "https://github.com/nebula-technologies/hateoas"

[features]
default = ["axum", "actix"]
axum = ["dep:axum", "dep:actix-http", "web-framework-support", "dep:simple_serde"]
actix = ["dep:actix-web", "web-framework-support", "dep:simple_serde", "dep:futures-core"]
web-framework-support = []

[dependencies]
bytes = "1.3.0"
railsgun = "2.0.0"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_with = "2.0.0"
uuid = {version = "1.1.2", features = ["serde", "v4"]}
axum = {version = "0.6.1", optional = true}
actix-web = {version = "4.2.1", optional = true}
actix-http = {version = "3.2.2", optional = true}
simple_serde = {version = "1.0.0-rc1", optional = true}
derive_more = "0.99.17"
futures-core = {version = "0.3.25", optional = true }


[dev-dependencies]
serde_json = "1.0.83"
